--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,3 +20,12 @@ steps:
     npm install
     ng build --prod
   displayName: 'npm install and build'
+
+- task: ArchiveFiles@2
+  inputs:
+       rootFolderOrFile: '$(Build.BinariesDirectory)/$(Build.SourcesDirectory)/dist/$(Build.SourcesDirectory)'
+       includeRootFolder: true
+       archiveType: 'zip'
+       archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.SourcesDirectory).zip'
+       replaceExistingArchive: true
+       verbose: true
