--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,8 @@ steps:
     npm install
     ng build --prod
     ls
+    cd dist
+    ls
   displayName: 'npm install and build'
 
 - task: ArchiveFiles@2
