Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,9 +20,11 @@ steps:
     npm install -g @angular/cli
     npm install
     ng build --prod
-    ls
-    cd dist
-    ls
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
   displayName: 'npm install and build'
 
 - task: PublishBuildArtifacts@1
