Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,8 @@ steps:
     npm install -g @angular/cli
     npm install
     ng build --prod
+    cd dist
+    ls
 - task: ArchiveFiles@2
   inputs:
       rootFolderOrFile: '$(Build.BinariesDirectory)/dist/Adfolks'
