--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,6 +24,13 @@ steps:
     ls
 - task: ArchiveFiles@2
   inputs:
+    rootFolderOrFile: '$(Build.BinariesDirectory)/dist/Adfolks'
+    includeRootFolder: true
+    archiveType: 'zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+    replaceExistingArchive: true
+- task: ArchiveFiles@2
+  inputs:
       rootFolderOrFile: '$(Build.BinariesDirectory)/dist/Adfolks'
       includeRootFolder: true
       archiveType: 'zip'
