--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,9 +22,11 @@ steps:
     ng build --prod
     cd dist
     ls
+    cd Adfolks
+    ls
 - task: CopyFiles@2
   inputs:
-    contents: '$(Build.Repository.LocalPath)/*'
+    contents: '$(Build.Repository.LocalPath)/**'
     targetFolder: $(Build.ArtifactStagingDirectory)
 - task: PublishBuildArtifacts@1
   inputs:
