--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,8 +26,9 @@ steps:
     ls
 - task: CopyFiles@2
   inputs:
-    contents: '$(Build.Repository.LocalPath)/dist/*'
+    contents: '$(Build.Repository.LocalPath)'
     targetFolder: $(Build.ArtifactStagingDirectory)
+
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
