--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ steps:
     ls
 - task: CopyFiles@2
   inputs:
-    contents: '$(Build.StagingDirectory)/*'
+    contents: '$(Agent.BuildDirectory)/*'
     targetFolder: $(Build.ArtifactStagingDirectory)
 
 - task: PublishBuildArtifacts@1
