--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ steps:
     ls
 - task: CopyFiles@2
   inputs:
-    contents: '$(Agent.BuildDirectory)/*'
+    contents: '/home/vsts/work/1/s/dist/*'
     targetFolder: $(Build.ArtifactStagingDirectory)
 
 - task: PublishBuildArtifacts@1
